--- a/lesson3/build.gradle
+++ b/lesson3/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id "kotlin-kapt"
 }
 
 android {
@@ -8,8 +9,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.lesson2"
-        minSdk 21
-        targetSdk 31
+        minSdk 23
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -35,11 +36,14 @@ android {
 }
 
 dependencies {
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
+    implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.6.0"
     implementation "com.github.moxy-community:moxy:2.1.2"
+    kapt "com.github.moxy-community:moxy-compiler:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
-    annotationProcessor 'com.github.moxy-community:moxy-compiler:2.0.2'
 
     implementation 'com.github.terrakok:cicerone:7.0'
 
@@ -49,7 +53,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    testImplementation 'junit:junit:'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
