--- a/lesson3/build.gradle
+++ b/lesson3/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'kotlin-parcelize'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdk 31
 
@@ -68,4 +70,10 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation "androidx.room:room-rxjava3:2.3.0"
     kapt 'androidx.room:room-compiler:2.3.0'
+
+    implementation "com.google.dagger:dagger:2.38"
+    implementation "com.google.dagger:dagger-android:2.38"
+    implementation "com.google.dagger:dagger-android-support:2.38"
+    kapt "com.google.dagger:dagger-compiler:2.38"
+    kapt "com.google.dagger:dagger-android-processor:2.38"
 }
